--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
+@font-face {
+  font-family: "ibm";
+  src: url("./IBMPlexSansThai-Regular.ttf") format("truetype");
+}
 
-
-body{
-  background-image: url('./img/bg.png');
+body {
+  background-image: url("./img/bg.png");
   min-height: 100vh;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: 'Prompt', sans-serif;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: "ibm", sans-serif;
 }
-.top{
-  background-color:white;
+.top {
+  background-color: rgb(85, 49, 49);
+
+  display: none;
+}
+@media only screen and (max-width: 768px) {
+  .top {
+    display: flex;
+  }
 }
 
-.title{
-  background-color:#2C3A78;
+.title {
+  background-color: #2c3a78;
 }
 
-.topichead{
-  color:white
+.topichead {
+  color: white;
 }
 
+.topicresult {
+  font-size: 18px;
+  font-weight: bold;
+}
 /* .img {
   position: absolute;
   left: 0px;
@@ -28,18 +41,84 @@ body{
   z-index: -1;
 } */
 
-.leftcard{
-  background-color: #FFFFFF;
+.filtercard {
+  background-color: #ffffff;
   border: 1px solid;
   box-sizing: border-box;
   border-radius: 4px;
-  border-color: #AFB9C6;
+  border-color: #afb9c6;
 }
 
-.cardbody{
-  background-color: #FFFFFF;
+.cardbody {
+  background-color: #ffffff;
   border: 1px solid;
   box-sizing: border-box;
   border-radius: 4px;
-  border-color: #D0E0E9;
+  border-color: #d0e0e9;
+}
+.shoptype,
+.province,
+.price,
+.typefood {
+  font-size: 16px;
+  font-weight: bold;
+}
+.selecttypefood,
+.selecttypeshop {
+  font-size: 14px;
+}
+
+.status {
+  background-color: rgb(27, 195, 0);
+  color: #ffffff;
+  font-size: 12px;
+}
+
+.underline {
+  width: 65%;
+  height: 1px;
+  background-color: rgb(238, 238, 238);
+  margin: 18px 0px;
+}
+
+/* .facilities{
+  margin-right: 6px;
+    margin-bottom: 3px;
+    padding: 5px;
+    border-radius: 20px;
+    border: 1px solid rgb(108, 191, 95);
+  } */
+
+.ratelevel {
+  color: #afb9c6;
+}
+
+@media only screen and (max-width: 768px) {
+  .filtercard {
+    display: none;
+  }
+}
+
+.shoppic {
+  min-height: 14rem;
+  background-color: rgb(236, 236, 236);
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.facilities {
+  border-radius: 50%;
+  border: 1px solid green;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
