--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,11 @@ body {
   font-size: 18px;
   font-weight: bold;
 }
+
+.explainshop{
+  color:rgb(153, 153, 153);
+ 
+}
 /* .img {
   position: absolute;
   left: 0px;
@@ -56,6 +61,12 @@ body {
   border-radius: 4px;
   border-color: #d0e0e9;
 }
+.shopname{
+  font-size:20px;
+  font-weight: bold;
+}
+
+
 .shoptype,
 .province,
 .price,
@@ -79,6 +90,11 @@ body {
   height: 1px;
   background-color: rgb(238, 238, 238);
   margin: 18px 0px;
+}
+.recommend{
+  color: rgb(68, 68, 68);
+  font-size: 14px;
+  font-weight: bold;
 }
 
 /* .facilities{
