--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,26 @@ body {
   font-family: "ibm", sans-serif;
 }
 .top {
-  background-color: rgb(85, 49, 49);
-
+  background-color:#FFFFFF;
   display: none;
 }
 @media only screen and (max-width: 768px) {
   .top {
     display: flex;
   }
+  
 }
+@media only screen and (max-width: 768px) {
+  .headerdesktop {
+    display: none;
+  }
+  
+}
+
+
+
+
+
 
 .title {
   background-color: #2c3a78;
@@ -28,6 +39,15 @@ body {
 
 .topichead {
   color: white;
+  font-size: 14px;
+}
+.form-control{
+  color:rgb(153, 153, 153);
+  font-size: 15px;
+  border: 1px solid;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border-color: #afb9c6;
 }
 
 .topicresult {
@@ -37,7 +57,11 @@ body {
 
 .explainshop{
   color:rgb(153, 153, 153);
- 
+ font-size: 14px;
+}
+
+.buttonsearch{
+  background-color: #F8F8F8;
 }
 /* .img {
   position: absolute;
@@ -130,11 +154,27 @@ body {
 }
 
 .facilities {
+  margin-left: 5px;
   border-radius: 50%;
-  border: 1px solid green;
+  border: 1px solid rgb(27, 195, 0);
   width: 30px;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.displayflex{
+  display: flex;
+}
+.button{
+  background-color: #ffffff;
+  height: 50px; 
+  border-radius: 5px;
+}
+
+.blackprice{
+  color:black;
+}
+.greyprice{
+  color:rgb(153, 153, 153);
 }
