[Edit] Update Final

--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,10 @@ body {
 }
 .bghead{
   background-color: #2A4365;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 .backbtfilter{
   font-size: 24px;
@@ -221,4 +225,15 @@ body {
   background-color:#ffffff;
   width: 100%;
   font-size:14px;
+}
+
+.ant-drawer-header{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: white;
+}
+
+.ant-drawer-title{
+  color: white;
 }
